[package]
name = "spng-benchmarks"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
zlib-ng = ["spng/zlib-ng"]

[dev-dependencies]
spng = { path = "../spng" }
png = "0.16"
criterion = { version = "0.3", features = ["html_reports"] }
criterion-macro = "0.3"

[[bench]]
name = "spng"
harness = false

[[bench]]
name = "png"
harness = false