[package]
name = "spng-sys"
version = "0.1.0-alpha.6"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
keywords = ["spng", "png", "image", "decoder"]
links = "spng"
repository = "https://github.com/aloucks/spng-rs"
documentation = "https://docs.rs/spng-sys"
license = "MIT OR Apache-2.0"
description = "Native bindings to libspng"

[dependencies]
libz-sys = { version = "1.1.2", optional = true, default-features = false, features = ["libc"] }
libc = "0.2"

[build-dependencies]
cc = "1.0"
