[package]
name = "spng-sys"
version = "0.2.0-alpha.3"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
keywords = ["spng", "png", "image", "decoder"]
links = "spng"
repository = "https://github.com/aloucks/spng-rs"
documentation = "https://docs.rs/spng-sys"
license = "MIT OR Apache-2.0"
description = "Native bindings to libspng"
readme = "../README.md"

[dependencies]
libz-sys = { version = "1.1.14", default-features = false, features = ["libc", "static"] }
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["libz-sys/static"]
zlib-ng = ["libz-sys/zlib-ng"]
