[package]
name = "spng"
version = "0.2.0-alpha.1"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
keywords = ["spng", "png", "image", "decoder"]
repository = "https://github.com/aloucks/spng-rs"
documentation = "https://docs.rs/spng"
license = "MIT OR Apache-2.0"
description = "Rust bindings to libspng"
readme = "../README.md"

[dependencies]
spng-sys = { version = "0.2.0-alpha.1", path = "../spng-sys" }
bitflags = "1.2"
libc = "0.2"

[features]
default = []
zlib-ng = ["spng-sys/zlib-ng"]
